add forecast export

--- a/arima_garch.ipynb
+++ b/arima_garch.ipynb
@@ -17,6 +17,60 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "7sPxg9DgHbRq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 390
+        },
+        "outputId": "5500eba1-a14a-42f9-fcb1-ab107f87fd42"
+      },
+      "source": [
+        "# у нового scipy проблема с совместимостью со statsmodels ==> делаем даунгрейд\n",
+        "\n",
+        "!pip install imgaug==0.2.5\n",
+        "!pip install scipy==1.2.0\n",
+        "\n",
+        "import imgaug\n",
+        "import scipy\n",
+        "\n",
+        "print(imgaug.__version__)\n",
+        "print(scipy.__version__)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: imgaug==0.2.5 in /usr/local/lib/python3.6/dist-packages (0.2.5)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from imgaug==0.2.5) (1.12.0)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from imgaug==0.2.5) (1.2.0)\n",
+            "Requirement already satisfied: numpy>=1.7.0 in /usr/local/lib/python3.6/dist-packages (from imgaug==0.2.5) (1.16.3)\n",
+            "Requirement already satisfied: scikit-image>=0.11.0 in /usr/local/lib/python3.6/dist-packages (from imgaug==0.2.5) (0.15.0)\n",
+            "Requirement already satisfied: pillow>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image>=0.11.0->imgaug==0.2.5) (4.3.0)\n",
+            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image>=0.11.0->imgaug==0.2.5) (2.3)\n",
+            "Requirement already satisfied: imageio>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from scikit-image>=0.11.0->imgaug==0.2.5) (2.4.1)\n",
+            "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image>=0.11.0->imgaug==0.2.5) (1.0.3)\n",
+            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image>=0.11.0->imgaug==0.2.5) (3.0.3)\n",
+            "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from pillow>=4.3.0->scikit-image>=0.11.0->imgaug==0.2.5) (0.46)\n",
+            "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from networkx>=2.0->scikit-image>=0.11.0->imgaug==0.2.5) (4.4.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.11.0->imgaug==0.2.5) (2.5.3)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.11.0->imgaug==0.2.5) (2.4.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.11.0->imgaug==0.2.5) (0.10.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.11.0->imgaug==0.2.5) (1.1.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.11.0->imgaug==0.2.5) (41.0.1)\n",
+            "Requirement already satisfied: scipy==1.2.0 in /usr/local/lib/python3.6/dist-packages (1.2.0)\n",
+            "Requirement already satisfied: numpy>=1.8.2 in /usr/local/lib/python3.6/dist-packages (from scipy==1.2.0) (1.16.3)\n",
+            "0.2.5\n",
+            "1.2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "LiqawMT_LMrm",
         "colab_type": "code",
         "colab": {}
@@ -26,7 +80,6 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import pickle\n",
-        "import statsmodels.formula.api as smf\n",
         "import statsmodels.tsa.api as smt\n",
         "import statsmodels.api as sm\n",
         "import scipy.stats as scs\n",
@@ -34,7 +87,8 @@
         "from statsmodels.tsa.seasonal import seasonal_decompose\n",
         "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
         "import warnings\n",
-        "warnings.filterwarnings(\"ignore\")"
+        "warnings.filterwarnings(\"ignore\")\n",
+        "from google.colab import files"
       ],
       "execution_count": 0,
       "outputs": []
@@ -116,7 +170,7 @@
       "metadata": {
         "id": "ZAhfErZbNGs6",
         "colab_type": "code",
-        "outputId": "fa481a4c-331f-4132-f1cb-5fe63d38fa02",
+        "outputId": "2f1fab31-9e67-4705-9a94-9595703559d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
@@ -128,12 +182,12 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-05-11 06:49:31--  https://raw.githubusercontent.com/RomanovIV/hse_home_projects/master/data/data_project_2.pickle\n",
+            "--2019-05-24 18:37:03--  https://raw.githubusercontent.com/RomanovIV/hse_home_projects/master/data/data_project_2.pickle\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -142,7 +196,7 @@
             "\n",
             "\rdata_project_2.pick   0%[                    ]       0  --.-KB/s               \rdata_project_2.pick 100%[===================>]  47.83K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2019-05-11 06:49:32 (3.40 MB/s) - ‘data_project_2.pickle’ saved [48982/48982]\n",
+            "2019-05-24 18:37:03 (3.20 MB/s) - ‘data_project_2.pickle’ saved [48982/48982]\n",
             "\n",
             "(1094, 3)\n"
           ],
@@ -222,7 +276,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -231,7 +285,7 @@
       "metadata": {
         "id": "3gHmRzeZR3hQ",
         "colab_type": "code",
-        "outputId": "016d5a10-78b0-4eb2-aa1f-c2b3a8118737",
+        "outputId": "8c9e9618-866a-4959-9d4f-e45f256d78fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
@@ -240,7 +294,7 @@
       "source": [
         "df['group'].value_counts()"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +311,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -276,7 +330,7 @@
       "metadata": {
         "id": "B17g4WUGUuzr",
         "colab_type": "code",
-        "outputId": "47258308-9924-472a-bf02-b5b2ab580f17",
+        "outputId": "df58b2b9-d017-4b25-b5c6-365dc2231ed7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -290,7 +344,7 @@
         "plt.xticks(df_our['date'][::20])\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +372,7 @@
       "metadata": {
         "id": "aXMLXo3AZTz7",
         "colab_type": "code",
-        "outputId": "100977b1-2157-45a2-ede4-5d505a403d8a",
+        "outputId": "3f4226e3-c1d6-41f4-c436-5a98913192f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
@@ -329,7 +383,7 @@
         "data = df_our['target']\n",
         "data.describe()"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,7 +403,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -409,7 +463,7 @@
       "metadata": {
         "id": "cDIaOvTmaO2E",
         "colab_type": "code",
-        "outputId": "3cfcbaa4-c98d-4533-f678-a89828c22f61",
+        "outputId": "1ea6cdd8-1664-425e-dd25-d70ec713e892",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
@@ -418,7 +472,7 @@
       "source": [
         "check_stationary(data)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +527,7 @@
       "metadata": {
         "id": "EyR0ht091ujT",
         "colab_type": "code",
-        "outputId": "db2e9f6c-26b8-44dc-d03b-e36e43dcb5ca",
+        "outputId": "0b118039-9df6-4192-9e62-e823a1dd53b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
@@ -487,7 +541,7 @@
         "ax2 = fig.add_subplot(212)\n",
         "fig = sm.graphics.tsa.plot_pacf(data, lags=lags, ax=ax2)"
       ],
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -518,7 +572,7 @@
       "metadata": {
         "id": "7Sofzcsiaj-S",
         "colab_type": "code",
-        "outputId": "83b6e1cc-e08e-41e9-f328-b6cf3dfefbb4",
+        "outputId": "519d327d-d44a-486d-af98-47f5ab1f03df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 560
@@ -532,7 +586,7 @@
         "fig = decomposition.plot()  \n",
         "fig.set_size_inches(15, 8);"
       ],
-      "execution_count": 68,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -574,7 +628,7 @@
       "metadata": {
         "id": "onM41DO-LUWv",
         "colab_type": "code",
-        "outputId": "ea680124-4f14-44de-89d9-a192d721a6cf",
+        "outputId": "c9fe9421-98d8-44a5-8780-b5a75090ee63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 729
@@ -591,7 +645,7 @@
         "data_sdecomp = data - seasonal - trend\n",
         "tsplot(data_sdecomp, lags=period)"
       ],
-      "execution_count": 69,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -622,7 +676,7 @@
       "metadata": {
         "id": "B0tgSW-KCAHV",
         "colab_type": "code",
-        "outputId": "1ccf7647-57f3-4f77-d113-0537a0055b6f",
+        "outputId": "d3ed1bbc-26d6-434b-972d-8109bfb83cf1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
@@ -631,7 +685,7 @@
       "source": [
         "check_stationary(data_sdecomp)"
       ],
-      "execution_count": 70,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +745,7 @@
       "metadata": {
         "id": "YWmztwahGO9M",
         "colab_type": "code",
-        "outputId": "bfcb6e54-6087-4be1-9239-15411833601b",
+        "outputId": "7190de29-f061-422b-bc68-e128d160f924",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -700,7 +754,7 @@
       "source": [
         "_, order, model = _get_best_model(data_sdecomp)"
       ],
-      "execution_count": 72,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +770,7 @@
       "metadata": {
         "id": "28A-frXaKAgp",
         "colab_type": "code",
-        "outputId": "fbca63ac-f580-4f0b-949f-e5e4273a0e89",
+        "outputId": "5f27c44a-6121-4eb8-c5ad-0bea0ef5b732",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 571
@@ -725,7 +779,7 @@
       "source": [
         "print(model.summary())"
       ],
-      "execution_count": 73,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,8 +789,8 @@
             "Dep. Variable:                 target   No. Observations:                  221\n",
             "Model:                     ARMA(5, 3)   Log Likelihood               -1280.854\n",
             "Method:                           mle   S.D. of innovations             77.767\n",
-            "Date:                Sat, 11 May 2019   AIC                           2579.708\n",
-            "Time:                        07:24:15   BIC                           2610.291\n",
+            "Date:                Fri, 24 May 2019   AIC                           2579.708\n",
+            "Time:                        18:37:33   BIC                           2610.291\n",
             "Sample:                             0   HQIC                          2592.057\n",
             "                                                                              \n",
             "================================================================================\n",
@@ -773,7 +827,7 @@
       "metadata": {
         "id": "RsG2W4ZL5NGf",
         "colab_type": "code",
-        "outputId": "47252b04-ee7a-4fa2-d76d-02d2235de742",
+        "outputId": "3e18611b-0d03-4401-acfc-feeea6134e4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -784,7 +838,7 @@
         "model.plot_predict(dynamic=False, ax=ax)\n",
         "plt.show()"
       ],
-      "execution_count": 74,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -815,7 +869,7 @@
       "metadata": {
         "id": "xTFweGAYXLlq",
         "colab_type": "code",
-        "outputId": "b162e01d-ed46-4e79-b7d2-e14cc69687cd",
+        "outputId": "95a4c072-076c-448a-bbd9-c4b06a5ba2b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 729
@@ -824,7 +878,7 @@
       "source": [
         "tsplot(model.resid, lags=half_period)"
       ],
-      "execution_count": 75,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -855,7 +909,7 @@
       "metadata": {
         "id": "EOE6v8FmXqK-",
         "colab_type": "code",
-        "outputId": "972967dc-766a-4943-b7f2-48f2771bf145",
+        "outputId": "2ceea028-1026-41bc-fec7-cda1429095c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -883,7 +937,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 77,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -903,6 +957,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "j4s5TukWystO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_forecast.to_csv('forecast.csv', index=False)\n",
+        "files.download('forecast.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8jvCNQp2JXJm",
         "colab_type": "code",
         "colab": {}
       },
